--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -77,7 +77,7 @@ jobs:
         fi
     - name: Check format
       run: |
-        go get -u golang.org/x/tools/cmd/goimports
+        go install golang.org/x/tools/cmd/goimports@latest
         go install github.com/che-incubator/check-license-header@379ba18fdb906d341ae451ea155cc34f1c4b4f1a
         git reset HEAD --hard
         echo "[INFO] Check code format and imports."
