--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -181,10 +181,10 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 256Mi
+              memory: 1Gi
             requests:
               cpu: 100m
-              memory: 64Mi
+              memory: 128Mi
       hostIPC: false
       hostNetwork: false
       hostPID: false
