--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -55,7 +55,16 @@ metadata:
             "namespace": "eclipse-che"
           },
           "spec": {
-            "components": {},
+            "components": {
+              "pluginRegistry": {
+                "disableInternalRegistry": true,
+                "externalPluginRegistries": [
+                  {
+                    "url": "https://registry.devfile.io/"
+                  }
+                ]
+              }
+            },
             "containerRegistry": {},
             "devEnvironments": {},
             "gitServices": {},
@@ -77,7 +86,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.82.0-835.next
+  name: eclipse-che.v7.82.0-837.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1248,7 +1257,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.82.0-835.next
+  version: 7.82.0-837.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
