--- a/helmcharts/next/templates/org_v2_checluster.yaml
+++ b/helmcharts/next/templates/org_v2_checluster.yaml
@@ -16,7 +16,11 @@ metadata:
   name: eclipse-che
   namespace: eclipse-che
 spec:
-  components: {}
+  components:
+    pluginRegistry:
+      disableInternalRegistry: true
+      externalPluginRegistries:
+        - url: https://registry.devfile.io/
   devEnvironments: {}
   networking:
     tlsSecretName: che-tls
