--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -69,3 +69,5 @@ entries:
     replaces: eclipse-che.v7.79.0
   - name: eclipse-che.v7.81.0
     replaces: eclipse-che.v7.80.0
+  - name: eclipse-che.v7.82.0
+    replaces: eclipse-che.v7.81.0
